--- a/dist-newstyle/packagedb/ghc-9.2.8/project-cis5520-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.2.8/project-cis5520-0.1.0.0-inplace.conf
@@ -17,28 +17,33 @@ exposed-modules:
     HaSqlBasicParsers HaSqlCLI HaSqlClauseLogic HaSqlClauseParser
     HaSqlDB HaSqlDBOps HaSqlDBOpsParser HaSqlDBRecordOps HaSqlDBSelect
     HaSqlDataParsers HaSqlFiles HaSqlLoadParser HaSqlMainParser
-    HaSqlOpsComParser HaSqlSyntax HaSqlTableParser HaSqlTables
-    HaSqlToString
+    HaSqlOpsComParser HaSqlScriptValidator HaSqlSyntax HaSqlTableParser
+    HaSqlTables HaSqlToString
 
 import-dirs:
-    /Users/kailashnatarajan/HaSQL/dist-newstyle/build/aarch64-osx/ghc-9.2.8/project-cis5520-0.1.0.0/build
+    C:\Users\zach2\Documents\HaSQL\dist-newstyle\build\x86_64-windows\ghc-9.2.8\project-cis5520-0.1.0.0\build
 
 library-dirs:
-    /Users/kailashnatarajan/HaSQL/dist-newstyle/build/aarch64-osx/ghc-9.2.8/project-cis5520-0.1.0.0/build
+    C:\Users\zach2\Documents\HaSQL\dist-newstyle\build\x86_64-windows\ghc-9.2.8\project-cis5520-0.1.0.0\build
+    C:\ghcup\msys64\mingw64\lib
 
 dynamic-library-dirs:
-    /Users/kailashnatarajan/HaSQL/dist-newstyle/build/aarch64-osx/ghc-9.2.8/project-cis5520-0.1.0.0/build
+    C:\Users\zach2\Documents\HaSQL\dist-newstyle\build\x86_64-windows\ghc-9.2.8\project-cis5520-0.1.0.0\build
+    C:\ghcup\msys64\mingw64\lib
 
-data-dir:             /Users/kailashnatarajan/HaSQL/.
+data-dir:             C:\Users\zach2\Documents\HaSQL\.
 hs-libraries:         HSproject-cis5520-0.1.0.0-inplace
+include-dirs:         C:\ghcup\msys64\mingw64\include
 depends:
-    HUnt-1.6.2.0-9f758590 QckChck-2.14.3-5c5f16d3 base-4.16.4.0
-    containers-0.6.5.1 directory-1.3.6.2 filepath-1.4.2.2 mtl-2.2.2
-    ntwrk-3.1.4.0-da2d4f1b parsec-3.1.15.0 pretty-1.1.3.6
-    rndm-1.2.1.1-e1906cad
+    HUnit-1.6.2.0-2fd11fd22eb69ca0a0352fe2eb932080b9afd2aa
+    QuickCheck-2.14.3-c38adb9530515d1f9c9b3793a07d38773c4c19e7
+    base-4.16.4.0 containers-0.6.5.1 directory-1.3.6.2 filepath-1.4.2.2
+    mtl-2.2.2 network-3.1.4.0-d9400a950cb9ac39ec76ffa67ea58d6996a1e001
+    parsec-3.1.15.0 pretty-1.1.3.6
+    random-1.2.1.1-cff161166caea24a670f7aea7a72f097a6d88671
 
 haddock-interfaces:
-    /Users/kailashnatarajan/HaSQL/dist-newstyle/build/aarch64-osx/ghc-9.2.8/project-cis5520-0.1.0.0/doc/html/project-cis5520/project-cis5520.haddock
+    C:\Users\zach2\Documents\HaSQL\dist-newstyle\build\x86_64-windows\ghc-9.2.8\project-cis5520-0.1.0.0\doc\html\project-cis5520\project-cis5520.haddock
 
 haddock-html:
-    /Users/kailashnatarajan/HaSQL/dist-newstyle/build/aarch64-osx/ghc-9.2.8/project-cis5520-0.1.0.0/doc/html/project-cis5520
+    C:\Users\zach2\Documents\HaSQL\dist-newstyle\build\x86_64-windows\ghc-9.2.8\project-cis5520-0.1.0.0\doc\html\project-cis5520
